bug fixed: candidat.html -> center align all sections

--- a/scss/components/_candidate-body.scss
+++ b/scss/components/_candidate-body.scss
@@ -4,9 +4,9 @@ $column-gap: 5rem;
   margin-top: $margin-xl;
 
   & > * {
-    margin: $margin-m 0;
+    margin: $margin-m auto;
     & > * {
-      margin: $margin-m 0;
+      margin: $margin-m auto;
     }
   }
 
